--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-flexbox-grid": "^2.0.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "react-weathericons": "^1.0.4",
     "redux": "^3.7.2"
   },
   "scripts": {
