--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^0.28.10",
+    "firebase": "^4.11.0",
+    "globalize": "^1.3.0",
+    "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
+    "moment": "^2.21.0",
     "react": "^16.2.0",
+    "react-big-calendar": "^0.18.0",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "react-weathericons": "^1.0.4",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "style-loader": "^0.20.3",
+    "typeface-open-sans": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
