--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free-solid": "^5.0.8",
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-brands": "^5.0.8",
     "@fortawesome/react-fontawesome": "0.0.17",
     "css-loader": "^0.28.10",
     "firebase": "^4.11.0",
@@ -17,8 +18,7 @@
     "react-scripts": "1.1.1",
     "react-weathericons": "^1.0.4",
     "redux": "^3.7.2",
-    "style-loader": "^0.20.3",
-    "typeface-open-sans": "0.0.54"
+    "style-loader": "^0.20.3"
   },
   "scripts": {
     "start": "react-scripts start",
