--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "css-loader": "^0.28.10",
-    "firebase": "^4.11.0",
-    "globalize": "^1.3.0",
-    "jquery": "^3.3.1",
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/fontawesome-free-brands": "^5.0.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "@fortawesome/react-fontawesome": "0.0.17",
     "css-loader": "^0.28.10",
     "firebase": "^4.11.0",
+    "gh-pages": "^1.1.0",
+    "globalize": "^1.3.0",
+    "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "moment": "^2.21.0",
     "react": "^16.2.0",
@@ -25,9 +25,12 @@
     "style-loader": "^0.20.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://missmakita.github.io/lunar.io"
 }
