--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://missmakita.github.io/lunar.io"
+  "homepage": "https://visidevi.github.io/lunar.io"
 }
